ingress_do/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths: 
      - path: /first
        backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
      - path: /second
        backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
